fix editor spacing

--- a/app/stylus/main.styl
+++ b/app/stylus/main.styl
@@ -240,6 +240,7 @@ header.ribbon-header
             align-items: center
             justify-content: center
             font-size: 30px
+            text-align: left
 
 .monster-editor
     display: flex
@@ -250,6 +251,8 @@ header.ribbon-header
     input
         display: block
         font-family: 'monsters'
+
+        padding-left: 1em
 
 
 /* ribbon style */
